Source/WebCore/html/HTMLSourceElement.cpp
@@ -59,9 +59,12 @@ Node::InsertionNotificationRequest HTMLSourceElement::insertedInto(ContainerNode
     HTMLElement::insertedInto(insertionPoint);
     Element* parent = parentElement();
     if (parent) {
+#if ENABLE(VIDEO)
         if (is<HTMLMediaElement>(*parent))
             downcast<HTMLMediaElement>(*parent).sourceWasAdded(this);
-        else if (is<HTMLPictureElement>(*parent))
+        else
+#endif
+        if (is<HTMLPictureElement>(*parent))
             downcast<HTMLPictureElement>(*parent).sourcesChanged();
     }
     return InsertionDone;
@@ -73,9 +76,12 @@ void HTMLSourceElement::removedFrom(ContainerNode& removalRoot)
     if (!parent && is<Element>(removalRoot))
         parent = &downcast<Element>(removalRoot);
     if (parent) {
+#if ENABLE(VIDEO)
         if (is<HTMLMediaElement>(*parent))
             downcast<HTMLMediaElement>(*parent).sourceWasRemoved(this);
-        else if (is<HTMLPictureElement>(*parent))
+        else
+#endif
+        if (is<HTMLPictureElement>(*parent))
             downcast<HTMLPictureElement>(*parent).sourcesChanged();
     }
     HTMLElement::removedFrom(removalRoot);
